Accessibility - Update all icons with aria-hidden

--- a/packages/components/components/elvis-loader/test/index.html
+++ b/packages/components/components/elvis-loader/test/index.html
@@ -40,15 +40,15 @@
     <p>Use ?cdn_dev=true for local dev</p>
     <button class="e-btn e-m-8" onclick="addProgressLinear()">
       <span class="e-btn__icon">
-        <i class="e-icon e-icon--download e-icon--inverted"></i>
-        <i class="e-icon e-icon--download"></i>
+        <i class="e-icon e-icon--download e-icon--inverted" aria-hidden="true"></i>
+        <i class="e-icon e-icon--download" aria-hidden="true"></i>
       </span>
       <span class="e-btn__title">Add progress-linear</span>
     </button>
     <button class="e-btn e-m-8" onclick="addPopover()">
       <span class="e-btn__icon">
-        <i class="e-icon e-icon--download e-icon--inverted"></i>
-        <i class="e-icon e-icon--download"></i>
+        <i class="e-icon e-icon--download e-icon--inverted" aria-hidden="true"></i>
+        <i class="e-icon e-icon--download" aria-hidden="true"></i>
       </span>
       <span class="e-btn__title">Add popover</span>
     </button>
