--- a/packages/elvis/percy/components/accordion.html
+++ b/packages/elvis/percy/components/accordion.html
@@ -16,8 +16,8 @@
         <div class="e-accordion__item">
           <div class="e-accordion__title">Closed Accordion</div>
           <div class="e-accordion__icon">
-            <i class="e-icon e-icon--expand_circle-color"></i>
-            <i class="e-icon e-icon--expand_circle-filled-color"></i>
+            <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+            <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
           </div>
           <div class="e-accordion__content">Hidden information</div>
         </div>
@@ -26,8 +26,8 @@
         <div class="e-accordion__item e-accordion__item--open">
           <div class="e-accordion__title">Open Accordion</div>
           <div class="e-accordion__icon">
-            <i class="e-icon e-icon--expand_circle-color"></i>
-            <i class="e-icon e-icon--expand_circle-filled-color"></i>
+            <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+            <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
           </div>
           <div class="e-accordion__content">Hidden information</div>
         </div>
@@ -40,8 +40,8 @@
           <div class="e-accordion__label">
             <div class="e-accordion__title">Hvor ofte kommer fakturaen?</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">Hidden information</div>
@@ -50,8 +50,8 @@
           <div class="e-accordion__label">
             <div class="e-accordion__title">Kan jeg bestille på vegne av andre?</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">Hidden information</div>
@@ -60,8 +60,8 @@
           <div class="e-accordion__label">
             <div class="e-accordion__title">Hva kan jeg gjøre for å spare strøm?</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
         </div>
@@ -69,8 +69,8 @@
           <div class="e-accordion__label">
             <div class="e-accordion__title">Hva kan jeg gjøre for å spare strøm?</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
         </div>
@@ -82,8 +82,8 @@
         <div class="e-accordion__item">
           <div class="e-accordion__title">Small Accordion</div>
           <div class="e-accordion__icon">
-            <i class="e-icon e-icon--expand_circle-color"></i>
-            <i class="e-icon e-icon--expand_circle-filled-color"></i>
+            <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+            <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
           </div>
         </div>
       </div>
@@ -92,8 +92,8 @@
         <div class="e-accordion__item">
           <div class="e-accordion__title">Medium Accordion</div>
           <div class="e-accordion__icon">
-            <i class="e-icon e-icon--expand_circle-color"></i>
-            <i class="e-icon e-icon--expand_circle-filled-color"></i>
+            <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+            <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
           </div>
         </div>
       </div>
@@ -102,8 +102,8 @@
         <div class="e-accordion__item">
           <div class="e-accordion__title">Large Accordion</div>
           <div class="e-accordion__icon">
-            <i class="e-icon e-icon--expand_circle-color"></i>
-            <i class="e-icon e-icon--expand_circle-filled-color"></i>
+            <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+            <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
           </div>
         </div>
       </div>
