--- a/packages/elvis/percy/components/alert.html
+++ b/packages/elvis/percy/components/alert.html
@@ -14,7 +14,7 @@
 
       <div class="e-alert e-alert--global">
         <div class="e-alert__icon">
-          <i class="e-icon e-icon--information_circle"></i>
+          <i class="e-icon e-icon--information_circle" aria-hidden="true"></i>
         </div>
         <div class="e-alert__content">
           <div class="e-alert__title">Kort info tittel</div>
@@ -25,7 +25,7 @@
 
       <div class="e-alert e-alert--global">
         <div class="e-alert__icon">
-          <i class="e-icon e-icon--information_circle"></i>
+          <i class="e-icon e-icon--information_circle" aria-hidden="true"></i>
         </div>
         <div class="e-alert__content">
           <div class="e-alert__title">Kort info tittel</div>
@@ -33,7 +33,7 @@
         </div>
         <div class="e-alert__close">
           <button class="e-btn e-btn--icon e-btn--sm">
-            <span class="e-btn__icon"><i class="e-icon e-icon--close-bold"></i></span>
+            <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
           </button>
         </div>
       </div>
@@ -41,14 +41,14 @@
       <div>
         <div class="e-alert e-alert--global e-alert--expandable">
           <div class="e-alert__icon">
-            <i class="e-icon e-icon--information_circle"></i>
+            <i class="e-icon e-icon--information_circle" aria-hidden="true"></i>
           </div>
           <div class="e-alert__content">
             <div class="e-alert__title">
               <div>Kort info tittel</div>
               <div class="e-alert__accordion">
-                <i class="e-icon e-icon--expand_circle-color"></i>
-                <i class="e-icon e-icon--expand_circle-filled-color"></i>
+                <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+                <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
               </div>
             </div>
             <div class="e-alert__text">
@@ -62,14 +62,14 @@
 
         <div class="e-alert e-alert--global e-alert--expandable e-alert--open e-mt-40">
           <div class="e-alert__icon">
-            <i class="e-icon e-icon--information_circle"></i>
+            <i class="e-icon e-icon--information_circle" aria-hidden="true"></i>
           </div>
           <div class="e-alert__content">
             <div class="e-alert__title">
               <div>Kort info tittel</div>
               <div class="e-alert__accordion">
-                <i class="e-icon e-icon--expand_circle-color"></i>
-                <i class="e-icon e-icon--expand_circle-filled-color"></i>
+                <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+                <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
               </div>
             </div>
             <div class="e-alert__text">
@@ -85,7 +85,7 @@
     <div>Actions</div>
     <div class="e-alert e-alert--global e-alert--no-title e-alert--actions">
       <div class="e-alert__icon">
-        <i class="e-icon e-icon--information_circle"></i>
+        <i class="e-icon e-icon--information_circle" aria-hidden="true"></i>
       </div>
       <div class="e-alert__content">
         <div class="e-alert__text">Informasjon til alle brukere på tvers av applikasjonen.</div>
@@ -105,7 +105,7 @@
     <div>
       <div class="e-alert e-alert--local">
         <div class="e-alert__icon">
-          <i class="e-icon e-icon--remove_circle e-icon--color-red"></i>
+          <i class="e-icon e-icon--remove_circle e-icon--color-red" aria-hidden="true"></i>
         </div>
         <div class="e-alert__content">
           <div class="e-alert__title">Standard alert</div>
@@ -127,7 +127,7 @@
 
     <div class="e-alert e-alert--toast">
       <div class="e-alert__icon">
-        <i class="e-icon e-icon--check_circle e-icon--color-green"></i>
+        <i class="e-icon e-icon--check_circle e-icon--color-green" aria-hidden="true"></i>
       </div>
       <div class="e-alert__content">
         <div class="e-alert__title">Kort Tittel</div>
@@ -137,7 +137,7 @@
     <div class="e-my-16">Closeable</div>
     <div class="e-alert e-alert--toast e-alert--no-title">
       <div class="e-alert__icon">
-        <i class="e-icon e-icon--check_circle e-icon--color-green"></i>
+        <i class="e-icon e-icon--check_circle e-icon--color-green" aria-hidden="true"></i>
       </div>
       <div class="e-alert__content">
         <div class="e-alert__text">
@@ -146,7 +146,7 @@
       </div>
       <div class="e-alert__close">
         <button class="e-btn e-btn--icon e-btn--sm">
-          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold"></i></span>
+          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
         </button>
       </div>
     </div>
@@ -155,7 +155,7 @@
     <div>
       <div class="e-alert e-alert--error e-alert--local">
         <div class="e-alert__icon">
-          <i class="e-icon e-icon--check_circle e-icon--color-red"></i>
+          <i class="e-icon e-icon--check_circle e-icon--color-red" aria-hidden="true"></i>
         </div>
         <div class="e-alert__content">
           <div class="e-alert__title">Kort Tittel</div>
@@ -164,7 +164,7 @@
       </div>
       <div class="e-alert e-alert e-alert--warn e-alert--local">
         <div class="e-alert__icon">
-          <i class="e-icon e-icon--check_circle e-icon--color-orange"></i>
+          <i class="e-icon e-icon--check_circle e-icon--color-orange" aria-hidden="true"></i>
         </div>
         <div class="e-alert__content">
           <div class="e-alert__title">Kort Tittel</div>
@@ -173,7 +173,7 @@
       </div>
       <div class="e-alert e-alert e-alert--info e-alert--local">
         <div class="e-alert__icon">
-          <i class="e-icon e-icon--check_circle e-icon--color-black"></i>
+          <i class="e-icon e-icon--check_circle e-icon--color-black" aria-hidden="true"></i>
         </div>
         <div class="e-alert__content">
           <div class="e-alert__title">Kort Tittel</div>
@@ -183,7 +183,7 @@
 
       <div class="e-alert e-alert--toast e-alert--info">
         <div class="e-alert__icon">
-          <i class="e-icon e-icon--check_circle e-icon--color-black"></i>
+          <i class="e-icon e-icon--check_circle e-icon--color-black" aria-hidden="true"></i>
         </div>
         <div class="e-alert__content">
           <div class="e-alert__title">Kort Tittel</div>
@@ -192,7 +192,7 @@
       </div>
       <div class="e-alert e-alert--toast">
         <div class="e-alert__icon">
-          <i class="e-icon e-icon--check_circle e-icon--color-black"></i>
+          <i class="e-icon e-icon--check_circle e-icon--color-black" aria-hidden="true"></i>
         </div>
         <div class="e-alert__content">
           <div class="e-alert__title">Kort Tittel</div>
@@ -202,7 +202,7 @@
     </div>
     <div class="e-alert e-alert--global">
       <div class="e-alert__icon">
-        <i class="e-icon e-icon--information_circle"></i>
+        <i class="e-icon e-icon--information_circle" aria-hidden="true"></i>
       </div>
       <div class="e-alert__content">
         <div class="e-alert__title">Kort info tittel</div>
@@ -211,7 +211,7 @@
     </div>
     <div class="e-alert e-alert--global e-alert--error">
       <div class="e-alert__icon">
-        <i class="e-icon e-icon--information_circle"></i>
+        <i class="e-icon e-icon--information_circle" aria-hidden="true"></i>
       </div>
       <div class="e-alert__content">
         <div class="e-alert__title">Kort info tittel</div>
@@ -220,7 +220,7 @@
     </div>
     <div class="e-alert e-alert--global e-alert--warn">
       <div class="e-alert__icon">
-        <i class="e-icon e-icon--information_circle"></i>
+        <i class="e-icon e-icon--information_circle" aria-hidden="true"></i>
       </div>
       <div class="e-alert__content">
         <div class="e-alert__title">Kort info tittel</div>
