--- a/packages/elvis/percy/components/buttons.html
+++ b/packages/elvis/percy/components/buttons.html
@@ -29,16 +29,16 @@
             </button>
             <button class="e-btn e-m-8">
                 <span class="e-btn__icon">
-                    <i class="e-icon e-icon--download e-icon--inverted"></i>
-                    <i class="e-icon e-icon--download"></i>
+                    <i class="e-icon e-icon--download e-icon--inverted" aria-hidden="true"></i>
+                    <i class="e-icon e-icon--download" aria-hidden="true"></i>
                 </span>
                 <span class="e-btn__title">Icon button</span>
             </button>
             <button class="e-btn e-m-8">
                 <span class="e-btn__title">Icon button</span>
                 <span class="e-btn__icon">
-                    <i class="e-icon e-icon--download e-icon--inverted"></i>
-                    <i class="e-icon e-icon--download"></i>
+                    <i class="e-icon e-icon--download e-icon--inverted" aria-hidden="true"></i>
+                    <i class="e-icon e-icon--download" aria-hidden="true"></i>
                 </span>
             </button>
             <button class="e-btn e-btn--loading e-m-8">
@@ -61,16 +61,16 @@
             </button>
             <button class="e-btn e-btn--inverted e-m-8">
                 <span class="e-btn__icon">
-                    <i class="e-icon e-icon--download e-icon--inverted"></i>
-                    <i class="e-icon e-icon--download"></i>
+                    <i class="e-icon e-icon--download e-icon--inverted" aria-hidden="true"></i>
+                    <i class="e-icon e-icon--download" aria-hidden="true"></i>
                 </span>
                 <span class="e-btn__title">Icon button</span>
             </button>
             <button class="e-btn e-btn--inverted e-m-8">
                 <span class="e-btn__title">Icon button</span>
                 <span class="e-btn__icon">
-                    <i class="e-icon e-icon--download e-icon--inverted"></i>
-                    <i class="e-icon e-icon--download"></i>
+                    <i class="e-icon e-icon--download e-icon--inverted" aria-hidden="true"></i>
+                    <i class="e-icon e-icon--download" aria-hidden="true"></i>
                 </span>
             </button>
             <button class="e-btn e-btn--loading e-btn--inverted e-m-8">
@@ -113,16 +113,16 @@
         </button>
         <button class="e-btn e-btn--secondary e-m-8">
             <span class="e-btn__icon">
-                <i class="e-icon e-icon--download e-icon--inverted"></i>
-                <i class="e-icon e-icon--download"></i>
+                <i class="e-icon e-icon--download e-icon--inverted" aria-hidden="true"></i>
+                <i class="e-icon e-icon--download" aria-hidden="true"></i>
             </span>
             <span class="e-btn__title">Icon button</span>
         </button>
         <button class="e-btn e-btn--secondary e-m-8">
             <span class="e-btn__title">Icon button</span>
             <span class="e-btn__icon">
-                <i class="e-icon e-icon--download e-icon--inverted"></i>
-                <i class="e-icon e-icon--download"></i>
+                <i class="e-icon e-icon--download e-icon--inverted" aria-hidden="true"></i>
+                <i class="e-icon e-icon--download" aria-hidden="true"></i>
             </span>
         </button>
         <button class="e-btn e-btn--secondary e-btn--loading e-m-8">
@@ -140,16 +140,16 @@
         </button>
         <button class="e-btn e-btn--secondary e-btn--inverted e-m-8">
             <span class="e-btn__icon">
-                <i class="e-icon e-icon--download e-icon--inverted"></i>
-                <i class="e-icon e-icon--download"></i>
+                <i class="e-icon e-icon--download e-icon--inverted" aria-hidden="true"></i>
+                <i class="e-icon e-icon--download" aria-hidden="true"></i>
                 </i></span>
             <span class="e-btn__title">Icon button</span>
         </button>
         <button class="e-btn e-btn--secondary e-btn--inverted e-m-8">
             <span class="e-btn__title">Icon button</span>
             <span class="e-btn__icon">
-                <i class="e-icon e-icon--download e-icon--inverted"></i>
-                <i class="e-icon e-icon--download"></i>
+                <i class="e-icon e-icon--download e-icon--inverted" aria-hidden="true"></i>
+                <i class="e-icon e-icon--download" aria-hidden="true"></i>
                 </i></span>
         </button>
         <button class="e-btn e-btn--secondary e-btn--loading e-btn--inverted e-m-8">
@@ -182,7 +182,7 @@
     <div>
         <button class="e-btn e-btn--tertiary e-m-8">
             <span class="e-btn__icon">
-                <i class="e-icon e-icon--download"></i>
+                <i class="e-icon e-icon--download" aria-hidden="true"></i>
             </span>
             <span class="e-btn__title">Tertiary</span>
         </button>
@@ -190,7 +190,7 @@
     <div style="background-color: #262626;">
         <button class="e-btn e-btn--tertiary e-btn--inverted e-m-8">
             <span class="e-btn__icon">
-                <i class="e-icon e-icon--download e-icon--inverted"></i>
+                <i class="e-icon e-icon--download e-icon--inverted" aria-hidden="true"></i>
             </span>
             <span class="e-btn__title">Tertiary</span>
         </button>
@@ -198,25 +198,25 @@
     <div>
         <button class="e-btn e-btn--tertiary e-btn---hover e-m-8">
             <span class="e-btn__icon">
-                <i class="e-icon e-icon--download"></i>
+                <i class="e-icon e-icon--download" aria-hidden="true"></i>
             </span>
             <span class="e-btn__title">Hover</span>
         </button>
         <button class="e-btn e-btn--tertiary e-btn---active e-m-8">
             <span class="e-btn__icon">
-                <i class="e-icon e-icon--download"></i>
+                <i class="e-icon e-icon--download" aria-hidden="true"></i>
             </span>
             <span class="e-btn__title">Active</span>
         </button>
         <button class="e-btn e-btn--tertiary e-btn---disabled e-m-8">
             <span class="e-btn__icon">
-                <i class="e-icon e-icon--download e-icon--color-grey-30"></i>
+                <i class="e-icon e-icon--download e-icon--color-grey-30" aria-hidden="true"></i>
             </span>
             <span class="e-btn__title">Disabled</span>
         </button>
         <button class="e-btn e-btn--tertiary e-btn---focus e-m-8">
             <span class="e-btn__icon">
-                <i class="e-icon e-icon--download"></i>
+                <i class="e-icon e-icon--download" aria-hidden="true"></i>
             </span>
             <span class="e-btn__title">Focus</span>
         </button>
@@ -230,15 +230,15 @@
         >
             <div class="e-text-md e-mb-8">Flat</div>
             <button class="e-btn e-btn--icon">
-                <span class="e-btn__icon"><i class="e-icon e-icon--upload"></i></span>
+                <span class="e-btn__icon"><i class="e-icon e-icon--upload" aria-hidden="true"></i></span>
             </button>
         </div>
         <div style="display: flex; flex-direction: column; align-items:center;">
             <div class="e-text-md e-mb-8">Circled</div>
             <button class="e-btn e-btn--icon e-btn--circled">
                 <span class="e-btn__icon">
-                    <i class="e-icon e-icon--information_circle"></i>
-                    <i class="e-icon e-icon e-icon--information_circle-filled-color"></i>
+                    <i class="e-icon e-icon--information_circle" aria-hidden="true"></i>
+                    <i class="e-icon e-icon e-icon--information_circle-filled-color" aria-hidden="true"></i>
                 </span>
             </button>
         </div>
@@ -251,8 +251,8 @@
             <div class="e-text-md e-mb-8 e-text-white">Flat</div>
             <button class="e-btn e-btn--icon e-btn--inverted">
                 <span class="e-btn__icon">
-                    <i class="e-icon e-icon--upload"></i>
-                    <i class="e-icon e-icon--upload e-icon--inverted"></i>
+                    <i class="e-icon e-icon--upload" aria-hidden="true"></i>
+                    <i class="e-icon e-icon--upload e-icon--inverted" aria-hidden="true"></i>
                 </span>
             </button>
         </div>
@@ -260,8 +260,8 @@
             <div class="e-text-md e-mb-8 e-text-white">Circled</div>
             <button class="e-btn e-btn--icon e-btn--circled e-btn--inverted">
                 <span class="e-btn__icon">
-                    <i class="e-icon e-icon--information_circle e-icon--inverted"></i>
-                    <i class="e-icon e-icon e-icon--information_circle-filled-color"></i>
+                    <i class="e-icon e-icon--information_circle e-icon--inverted" aria-hidden="true"></i>
+                    <i class="e-icon e-icon e-icon--information_circle-filled-color" aria-hidden="true"></i>
                 </span>
             </button>
         </div>
@@ -273,7 +273,7 @@
         >
             <div class="e-text-md e-mb-8">Hover</div>
             <button class="e-btn e-btn--icon e-btn---hover">
-                <span class="e-btn__icon"><i class="e-icon e-icon--upload"></i></span>
+                <span class="e-btn__icon"><i class="e-icon e-icon--upload" aria-hidden="true"></i></span>
             </button>
         </div>
         <div
@@ -282,7 +282,7 @@
         >
             <div class="e-text-md e-mb-8">Active</div>
             <button class="e-btn e-btn--icon e-btn---active">
-                <span class="e-btn__icon"><i class="e-icon e-icon--upload"></i></span>
+                <span class="e-btn__icon"><i class="e-icon e-icon--upload" aria-hidden="true"></i></span>
             </button>
         </div>
         <div
@@ -291,7 +291,7 @@
         >
             <div class="e-text-md e-mb-8">Disabled</div>
             <button class="e-btn e-btn--icon e-btn---disabled">
-                <span class="e-btn__icon"><i class="e-icon e-icon--upload e-icon--color-grey-30"></i></span>
+                <span class="e-btn__icon"><i class="e-icon e-icon--upload e-icon--color-grey-30" aria-hidden="true"></i></span>
             </button>
         </div>
         <div
@@ -299,7 +299,7 @@
         >
             <div class="e-text-md e-mb-8">Focus</div>
             <button class="e-btn e-btn--icon e-btn---focus">
-                <span class="e-btn__icon"><i class="e-icon e-icon--upload"></i></span>
+                <span class="e-btn__icon"><i class="e-icon e-icon--upload" aria-hidden="true"></i></span>
             </button>
         </div>
     </div>
