--- a/packages/elvis/percy/components/datepicker.html
+++ b/packages/elvis/percy/components/datepicker.html
@@ -15,7 +15,7 @@
       <div class="e-input">
         <button class="e-btn e-btn--icon">
           <span class="e-btn__icon">
-            <i class="e-icon e-icon--calendar"></i>
+            <i class="e-icon e-icon--calendar" aria-hidden="true"></i>
           </span>
         </button>
         <input id="normal" type="date" placeholder="" />
@@ -27,7 +27,7 @@
       <div class="e-input">
         <button class="e-btn e-btn--icon">
           <span class="e-btn__icon">
-            <i class="e-icon e-icon--clock"></i>
+            <i class="e-icon e-icon--clock" aria-hidden="true"></i>
           </span>
         </button>
         <input id="normal" type="time" placeholder="" />
