--- a/packages/elvis/percy/components/header.html
+++ b/packages/elvis/percy/components/header.html
@@ -18,8 +18,8 @@
             <a class="e-header__top-bar-mobile__link">
               <span>DROPS</span>
               <span class="e-header__top-bar-mobile__link-icon">
-                <i class="e-icon e-icon--arrow_down-bold"></i>
-                <i class="e-icon e-icon--arrow_up-bold"></i>
+                <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
+                <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
               </span>
             </a>
           </div>
@@ -31,8 +31,8 @@
             <a class="e-header__top-bar-mobile__link">
               <span>South</span>
               <span class="e-header__top-bar-mobile__link-icon">
-                <i class="e-icon e-icon--arrow_down-bold"></i>
-                <i class="e-icon e-icon--arrow_up-bold"></i>
+                <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
+                <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
               </span>
             </a>
           </div>
@@ -44,11 +44,11 @@
             <div class="e-header__top-bar-mobile__user-menu">
               <div class="e-header__top-bar-mobile__user-menu-name">Ragna Nordmann (e55717@hafslund.no)</div>
               <div class="e-header__top-bar-mobile__user-menu-settings">
-                <i class="e-icon e-icon--cog e-icon--xs"></i>
+                <i class="e-icon e-icon--cog e-icon--xs" aria-hidden="true"></i>
                 Settings
               </div>
               <div class="e-header__top-bar-mobile__user-menu-logout">
-                <i class="e-icon e-icon--logout e-icon--xs"></i>
+                <i class="e-icon e-icon--logout e-icon--xs" aria-hidden="true"></i>
                 Log out
               </div>
             </div>
@@ -70,8 +70,8 @@
                   <a class="e-header__top-bar-desktop__link">
                     <span>Drops</span>
                     <span class="e-header__top-bar-desktop__link-icon">
-                      <i class="e-icon e-icon--arrow_down-bold"></i>
-                      <i class="e-icon e-icon--arrow_up-bold"></i>
+                      <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
+                      <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
                     </span>
                   </a>
                   <div class="e-header__top-bar-desktop__app-menu">
@@ -122,8 +122,8 @@
                   <a class="e-header__top-bar-desktop__link">
                     <span>Elvia South</span>
                     <span class="e-header__top-bar-desktop__link-icon">
-                      <i class="e-icon e-icon--arrow_down-bold"></i>
-                      <i class="e-icon e-icon--arrow_up-bold"></i>
+                      <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
+                      <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
                     </span>
                   </a>
                   <div class="e-header__top-bar-desktop__area-menu">
@@ -136,18 +136,18 @@
                 <!--USER-->
                 <div class="e-header__top-bar-desktop__user">
                   <a class="e-header__top-bar-desktop__link">
-                    <span><i class="e-icon e-icon--profile-bold e-icon--xs"></i></span>
+                    <span><i class="e-icon e-icon--profile-bold e-icon--xs" aria-hidden="true"></i></span>
                     <span>Ragna Nordmann</span>
                   </a>
                   <div class="e-header__top-bar-desktop__user-menu">
                     <div class="e-header__top-bar-desktop__user-menu-name">Ragna Nordmann</div>
                     <div class="e-header__top-bar-desktop__user-menu-mail">e55717@hafslund.no</div>
                     <div class="e-header__top-bar-desktop__user-menu-settings">
-                      <i class="e-icon e-icon--cog e-icon--xs"></i>
+                      <i class="e-icon e-icon--cog e-icon--xs" aria-hidden="true"></i>
                       Settings
                     </div>
                     <div class="e-header__top-bar-desktop__user-menu-logout">
-                      <i class="e-icon e-icon--logout e-icon--xs"></i>
+                      <i class="e-icon e-icon--logout e-icon--xs" aria-hidden="true"></i>
                       Log out
                     </div>
                   </div>
@@ -157,8 +157,8 @@
               <!--HAMBURGER-->
               <div class="col-xs-2 col-sm-3 col-md-3">
                 <div class="e-header__top-bar-desktop__hamburger">
-                  <i class="e-icon e-icon--menu-bold"></i>
-                  <i class="e-icon e-icon--remove_circle-color"></i>
+                  <i class="e-icon e-icon--menu-bold" aria-hidden="true"></i>
+                  <i class="e-icon e-icon--remove_circle-color" aria-hidden="true"></i>
                 </div>
               </div>
             </div>
@@ -171,29 +171,29 @@
         <!--APPS-->
         <div class="e-header__sidebar__item">
           <span class="e-header__sidebar__icon">
-            <i class="e-icon e-icon--dashboard"></i>
-            <i class="e-icon e-icon--dashboard-color"></i>
+            <i class="e-icon e-icon--dashboard" aria-hidden="true"></i>
+            <i class="e-icon e-icon--dashboard-color" aria-hidden="true"></i>
           </span>
           <span class="e-header__sidebar__text">Overview</span>
         </div>
         <div class="e-header__sidebar__item">
           <span class="e-header__sidebar__icon">
-            <i class="e-icon e-icon--search"></i>
-            <i class="e-icon e-icon--search-color"></i>
+            <i class="e-icon e-icon--search" aria-hidden="true"></i>
+            <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
           </span>
           <span class="e-header__sidebar__text">Search</span>
         </div>
         <div class="e-header__sidebar__item e-header__sidebar__item--active">
           <span class="e-header__sidebar__icon">
-            <i class="e-icon e-icon--pin"></i>
-            <i class="e-icon e-icon--pin-color"></i>
+            <i class="e-icon e-icon--pin" aria-hidden="true"></i>
+            <i class="e-icon e-icon--pin-color" aria-hidden="true"></i>
           </span>
           <span class="e-header__sidebar__text">Analysis</span>
         </div>
         <div class="e-header__sidebar__item">
           <span class="e-header__sidebar__icon">
-            <i class="e-icon e-icon--graph_bar"></i>
-            <i class="e-icon e-icon--graph_bar-color"></i>
+            <i class="e-icon e-icon--graph_bar" aria-hidden="true"></i>
+            <i class="e-icon e-icon--graph_bar-color" aria-hidden="true"></i>
           </span>
           <span class="e-header__sidebar__text">Statistics</span>
         </div>
@@ -201,8 +201,8 @@
         <!--OPEN/CLOSE BTN-->
         <div class="e-header__sidebar__open-close">
           <span class="e-header__sidebar__icon">
-            <i class="e-icon e-icon--open_menu"></i>
-            <i class="e-icon e-icon--close_menu"></i>
+            <i class="e-icon e-icon--open_menu" aria-hidden="true"></i>
+            <i class="e-icon e-icon--close_menu" aria-hidden="true"></i>
           </span>
           <span class="e-header__sidebar__text">Minimize</span>
         </div>
