--- a/packages/elvis/percy/components/input.html
+++ b/packages/elvis/percy/components/input.html
@@ -77,14 +77,14 @@
       <div class="e-input e-input---invalid">
         <button class="e-btn e-btn--icon" (click)="showMockPassword()">
           <span class="e-btn__icon">
-            <i class="e-icon e-icon--view_on"></i>
+            <i class="e-icon e-icon--view_on" aria-hidden="true"></i>
           </span>
         </button>
         <input id="validationExample" type="password" value="Passord" invalid #validationExample />
       </div>
       <span class="e-form-field__error e-form-field__error--visible">
         <span>
-          <i class="e-icon e-icon--remove_circle e-icon--color-red e-icon--xs"></i>
+          <i class="e-icon e-icon--remove_circle e-icon--color-red e-icon--xs" aria-hidden="true"></i>
         </span>
         <span>Passord må inneholde både bokstaver og tall</span>
       </span>
