--- a/packages/elvis/percy/components/link.html
+++ b/packages/elvis/percy/components/link.html
@@ -49,7 +49,7 @@
       <div class="e-mt-16 e-mr-16">
         <a class="e-link e-link--new-tab" href="https://design.elvia.io/components/link-doc#Overview">
           <span class="e-link__title">New tab</span>
-          <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold"></i></span>
+          <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i></span>
         </a>
       </div>
       <div class="e-mt-16 e-mr-16 e-bg-grey">
@@ -58,13 +58,15 @@
           href="https://design.elvia.io/components/link-doc#Overview"
         >
           <span class="e-link__title">New tab</span>
-          <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold e-icon--inverted"></i></span>
+          <span class="e-link__icon">
+            <i class="e-icon e-icon--new_tab-bold e-icon--inverted" aria-hidden="true"></i>
+          </span>
         </a>
       </div>
       <div class="e-mt-16" style="width: 100px">
         <a class="e-link e-link--new-tab" href="https://design.elvia.io/components/link-doc#Overview">
           <span class="e-link__title">New tab link over multiple lines</span>
-          <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold"></i></span>
+          <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i></span>
         </a>
       </div>
     </div>
@@ -73,8 +75,8 @@
       <a class="e-link e-link--action" href="https://design.elvia.io/components/link-doc#Overview">
         <span class="e-link__title">Action link</span>
         <span class="e-link__icon">
-          <i class="e-icon e-icon--arrow_circle-color"></i>
-          <i class="e-icon e-icon--arrow_circle-filled-color"></i>
+          <i class="e-icon e-icon--arrow_circle-color" aria-hidden="true"></i>
+          <i class="e-icon e-icon--arrow_circle-filled-color" aria-hidden="true"></i>
         </span>
       </a>
     </div>
@@ -83,8 +85,8 @@
     <div>
       <a class="e-link e-link--action" href="https://design.elvia.io/components/link-doc#Overview">
         <span class="e-link__icon">
-          <i class="e-icon e-icon--arrow_left_circle-color"></i>
-          <i class="e-icon e-icon--arrow_left_circle-filled-color"></i>
+          <i class="e-icon e-icon--arrow_left_circle-color" aria-hidden="true"></i>
+          <i class="e-icon e-icon--arrow_left_circle-filled-color" aria-hidden="true"></i>
         </span>
         <span class="e-link__title">Back link</span>
       </a>
@@ -94,23 +96,35 @@
     <div class="e-mb-16" style="display: flex; align-items: center; flex-wrap: wrap">
       <a class="e-link e-link--jumbo e-mr-16" href="https://design.elvia.io/components/link-doc#Overview">
         <span class="e-link__title">Jumbo link</span>
-        <span class="e-link__icon"><i class="e-icon e-icon--arrow_long_right-bold e-icon--xs"></i></span>
+        <span class="e-link__icon">
+          <i class="e-icon e-icon--arrow_long_right-bold e-icon--xs" aria-hidden="true"></i>
+        </span>
       </a>
       <a class="e-link e-link--jumbo" href="https://design.elvia.io/components/link-doc#Overview">
-        <span class="e-link__icon"><i class="e-icon e-icon--powerline e-icon--xl"></i></span>
+        <span class="e-link__icon">
+          <i class="e-icon e-icon--powerline e-icon--xl" aria-hidden="true"></i>
+        </span>
         <span class="e-link__title">Jumbo link with icon</span>
-        <span class="e-link__icon"><i class="e-icon e-icon--arrow_long_right-bold e-icon--xs"></i></span>
+        <span class="e-link__icon">
+          <i class="e-icon e-icon--arrow_long_right-bold e-icon--xs" aria-hidden="true"></i>
+        </span>
       </a>
     </div>
     <div class="e-mb-40" style="display: flex; align-items: center; flex-wrap: wrap">
       <a class="e-link e-link--jumbo e-mr-16" href="https://design.elvia.io/components/link-doc#Overview">
         <span class="e-link__title">Jumbo link external</span>
-        <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold e-icon--xs"></i></span>
+        <span class="e-link__icon">
+          <i class="e-icon e-icon--new_tab-bold e-icon--xs" aria-hidden="true"></i>
+        </span>
       </a>
       <a class="e-link e-link--jumbo" href="https://design.elvia.io/components/link-doc#Overview">
-        <span class="e-link__icon"><i class="e-icon e-icon--powerline e-icon--xl"></i></span>
+        <span class="e-link__icon">
+          <i class="e-icon e-icon--powerline e-icon--xl" aria-hidden="true"></i>
+        </span>
         <span class="e-link__title">Jumbo link external with icon</span>
-        <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold e-icon--xs"></i></span>
+        <span class="e-link__icon">
+          <i class="e-icon e-icon--new_tab-bold e-icon--xs" aria-hidden="true"></i>
+        </span>
       </a>
     </div>
 
@@ -121,8 +135,8 @@
         <a class="e-link e-link--card" href="https://design.elvia.io/components/link-doc#Overview">
           <div class="e-link__content">
             <span class="e-link__icon">
-              <i class="e-icon e-icon--electricity_safety"></i>
-              <i class="e-icon e-icon--electricity_safety-color"></i>
+              <i class="e-icon e-icon--electricity_safety" aria-hidden="true"></i>
+              <i class="e-icon e-icon--electricity_safety-color" aria-hidden="true"></i>
             </span>
             <div class="e-link__title">Label</div>
           </div>
@@ -137,8 +151,8 @@
         >
           <div class="e-link__content">
             <span class="e-link__icon">
-              <i class="e-icon e-icon--electricity_safety"></i>
-              <i class="e-icon e-icon--electricity_safety-color"></i>
+              <i class="e-icon e-icon--electricity_safety" aria-hidden="true"></i>
+              <i class="e-icon e-icon--electricity_safety-color" aria-hidden="true"></i>
             </span>
             <div class="e-link__title">Label</div>
             <div class="e-link__description">Description</div>
@@ -183,8 +197,8 @@
       >
         <span class="e-link__title">Hover</span>
         <span class="e-link__icon">
-          <i class="e-icon e-icon--arrow_circle-color"></i>
-          <i class="e-icon e-icon--arrow_circle-filled-color"></i>
+          <i class="e-icon e-icon--arrow_circle-color" aria-hidden="true"></i>
+          <i class="e-icon e-icon--arrow_circle-filled-color" aria-hidden="true"></i>
         </span>
       </a>
       <a
@@ -193,8 +207,8 @@
       >
         <span class="e-link__title">Focus</span>
         <span class="e-link__icon">
-          <i class="e-icon e-icon--arrow_circle-color"></i>
-          <i class="e-icon e-icon--arrow_circle-filled-color"></i>
+          <i class="e-icon e-icon--arrow_circle-color" aria-hidden="true"></i>
+          <i class="e-icon e-icon--arrow_circle-filled-color" aria-hidden="true"></i>
         </span>
       </a>
       <div class="e-title-xs e-my-16">Jumbo</div>
@@ -203,14 +217,18 @@
         href="https://design.elvia.io/components/link-doc#Overview"
       >
         <span class="e-link__title">Hover</span>
-        <span class="e-link__icon"><i class="e-icon e-icon--arrow_right-bold e-icon--xs"></i></span>
+        <span class="e-link__icon">
+          <i class="e-icon e-icon--arrow_right-bold e-icon--xs" aria-hidden="true"></i>
+        </span>
       </a>
       <a
         class="e-link e-link--jumbo e-link---focus"
         href="https://design.elvia.io/components/link-doc#Overview"
       >
         <span class="e-link__title">Focus</span>
-        <span class="e-link__icon"><i class="e-icon e-icon--arrow_right-bold e-icon--xs"></i></span>
+        <span class="e-link__icon">
+          <i class="e-icon e-icon--arrow_right-bold e-icon--xs" aria-hidden="true"></i>
+        </span>
       </a>
       <div class="e-title-xs e-my-16">Card</div>
       <div style="display: flex">
@@ -221,8 +239,8 @@
           >
             <div class="e-link__content">
               <span class="e-link__icon">
-                <i class="e-icon e-icon--electricity_safety"></i>
-                <i class="e-icon e-icon--electricity_safety-color"></i>
+                <i class="e-icon e-icon--electricity_safety" aria-hidden="true"></i>
+                <i class="e-icon e-icon--electricity_safety-color" aria-hidden="true"></i>
               </span>
               <div class="e-link__title">Label</div>
             </div>
@@ -235,8 +253,8 @@
           >
             <div class="e-link__content">
               <span class="e-link__icon">
-                <i class="e-icon e-icon--electricity_safety"></i>
-                <i class="e-icon e-icon--electricity_safety-color"></i>
+                <i class="e-icon e-icon--electricity_safety" aria-hidden="true"></i>
+                <i class="e-icon e-icon--electricity_safety-color" aria-hidden="true"></i>
               </span>
               <div class="e-link__title">Label</div>
             </div>
