--- a/packages/elvis/percy/components/list.html
+++ b/packages/elvis/percy/components/list.html
@@ -38,18 +38,24 @@
     <div class="e-title-xs e-my-16">Icon list</div>
     <ol class="e-list e-list--icons">
       <li>
-        <span class="e-list__icon"><i class="e-icon e-icon e-icon--powermeter_ams e-icon--md"></i></span>
+        <span class="e-list__icon">
+          <i class="e-icon e-icon e-icon--powermeter_ams e-icon--md" aria-hidden="true"></i>
+        </span>
         <strong>Slik fungerer strømmåleren:</strong>
         Gjelder etablering og montering av nye målere og ved bytte av eksisterende målere.
       </li>
       <li>
-        <span class="e-list__icon"><i class="e-icon e-icon e-icon--han-color e-icon--md"></i></span>
+        <span class="e-list__icon">
+          <i class="e-icon e-icon e-icon--han-color e-icon--md" aria-hidden="true"></i>
+        </span>
         <strong>Han Porten:</strong>
         Ønsker du detaljert informasjon om strømforbruket ditt? Vil du styre strømforbruket ditt bedre? Da kan
         det være en idé å bestille åpning av HAN-porten på strømmåleren din.
       </li>
       <li>
-        <span class="e-list__icon"><i class="e-icon e-icon e-icon--powermeter_old e-icon--md"></i></span>
+        <span class="e-list__icon">
+          <i class="e-icon e-icon e-icon--powermeter_old e-icon--md" aria-hidden="true"></i>
+        </span>
         <strong>Priser på målere og utstyr:</strong>
         Gjelder etablering og montering av nye målere og ved bytte av eksisterende målere.
       </li>
