--- a/packages/elvis/percy/components/position-picker.html
+++ b/packages/elvis/percy/components/position-picker.html
@@ -11,11 +11,13 @@
     <div class="e-title-xs e-my-16">Before picking position</div>
     <div class="e-position-picker">
       <div class="e-position-picker__icon">
-        <span class="e-btn__icon"><i class="e-icon e-icon--map_pin-color e-icon--lg"></i></span>
+        <span class="e-btn__icon">
+          <i class="e-icon e-icon--map_pin-color e-icon--lg" aria-hidden="true"></i>
+        </span>
       </div>
       <div class="e-position-picker__action">
         <button class="e-btn e-btn--tertiary">
-          <span class="e-btn__icon"><i class="e-icon e-icon--add_circle"></i></span>
+          <span class="e-btn__icon"><i class="e-icon e-icon--add_circle" aria-hidden="true"></i></span>
           <span class="e-btn__title">Velg plassering</span>
         </button>
       </div>
