--- a/packages/elvis/percy/components/table.html
+++ b/packages/elvis/percy/components/table.html
@@ -253,15 +253,15 @@
             <th scope="col" class="e-table__sort-header">
               Periode
               <span class="e-table__sort-icon e-table__sort-icon--inactive">
-                <i class="e-icon e-icon--arrow_down-bold"></i>
-                <i class="e-icon e-icon--arrow_up-bold"></i>
+                <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
+                <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
               </span>
             </th>
             <th scope="col" class="e-table__sort-header">
               Beløp
               <span class="e-table__sort-icon e-table__sort-icon--up">
-                <i class="e-icon e-icon--arrow_down-bold"></i>
-                <i class="e-icon e-icon--arrow_up-bold"></i>
+                <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
+                <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
               </span>
             </th>
           </tr>
@@ -294,7 +294,7 @@
           <tr>
             <td class="e-text-left">Text left aligned</td>
             <td class="e-text-center">
-              <i class="e-icon e-icon--download e-icon--sm"></i>
+              <i class="e-icon e-icon--download e-icon--sm" aria-hidden="true"></i>
             </td>
             <td class="e-text-right">123456789</td>
           </tr>
@@ -429,10 +429,10 @@
             <td>15.01.2021</td>
             <td class="e-table__buttons">
               <button class="e-btn e-btn--icon">
-                <span class="e-btn__icon"><i class="e-icon e-icon--edit"></i></span>
+                <span class="e-btn__icon"><i class="e-icon e-icon--edit" aria-hidden="true"></i></span>
               </button>
               <button class="e-btn e-btn--icon">
-                <span class="e-btn__icon"><i class="e-icon e-icon--bin"></i></span>
+                <span class="e-btn__icon"><i class="e-icon e-icon--bin" aria-hidden="true"></i></span>
               </button>
             </td>
           </tr>
@@ -441,10 +441,10 @@
             <td>15.01.2021</td>
             <td class="e-table__buttons">
               <button class="e-btn e-btn--icon">
-                <span class="e-btn__icon"><i class="e-icon e-icon--edit"></i></span>
+                <span class="e-btn__icon"><i class="e-icon e-icon--edit" aria-hidden="true"></i></span>
               </button>
               <button class="e-btn e-btn--icon">
-                <span class="e-btn__icon"><i class="e-icon e-icon--bin"></i></span>
+                <span class="e-btn__icon"><i class="e-icon e-icon--bin" aria-hidden="true"></i></span>
               </button>
             </td>
           </tr>
@@ -509,8 +509,8 @@
             <td>
               <a class="e-link e-link--action">
                 <span class="e-link__icon">
-                  <i class="e-icon e-icon--arrow_right_circle-color"></i>
-                  <i class="e-icon e-icon--arrow_right_circle-filled-color"></i>
+                  <i class="e-icon e-icon--arrow_right_circle-color" aria-hidden="true"></i>
+                  <i class="e-icon e-icon--arrow_right_circle-filled-color" aria-hidden="true"></i>
                 </span>
               </a>
             </td>
@@ -521,8 +521,8 @@
             <td>
               <a class="e-link e-link--action">
                 <span class="e-link__icon">
-                  <i class="e-icon e-icon--arrow_right_circle-color"></i>
-                  <i class="e-icon e-icon--arrow_right_circle-filled-color"></i>
+                  <i class="e-icon e-icon--arrow_right_circle-color" aria-hidden="true"></i>
+                  <i class="e-icon e-icon--arrow_right_circle-filled-color" aria-hidden="true"></i>
                 </span>
               </a>
             </td>
