--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -65,16 +65,16 @@
             <elvia-card
               [header]="'Title3'"
               [description]="'description3'"
-              [icon]="'3'"
+              [icon]="'3'" aria-hidden="true"></i>
               [borderColor]="'green'"
             ></elvia-card>
           </a>
         </div>
       </div>
     </div>
-  </div>
-
-  <!--Carousel-->
+  </div> aria-hidden="true"></i>
+ aria-hidden="true"></i>
+  <!--Carousel--> aria-hidden="true"></i>
   <div class="example-wrapper">
     <h3>Carousel</h3>
     <elvia-carousel>
