--- a/packages/web/src/app/doc-pages/components/accordion-doc/accordion-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/accordion-doc/accordion-doc.component.html
@@ -83,8 +83,8 @@
         <div class="e-accordion e-accordion--lg e-accordion--center">
           <div class="e-accordion__item" #accordionLiveExample>
             <div class="e-accordion__icon" (click)="toggleOpen()">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
             <div class="e-accordion__content">
               <div>{{ examples.texts.sm['eng-GBR'].description }}</div>
