--- a/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
+++ b/packages/web/src/app/doc-pages/components/alert-messages/alert-messages.component.html
@@ -12,7 +12,7 @@
   <div class="e-my-48" class="component-preview-temp component-preview-animation">
     <div class="e-alert e-mt-24" role="alert">
       <div class="e-alert__icon">
-        <i class="e-icon e-icon--remove_circle e-icon--color-red" aria-hidden="true"></i>
+        <i class="e-icon e-icon--remove_circle e-icon--color-red" aria-hidden="true" aria-hidden="true"></i>
       </div>
       <div class="e-alert__content">
         <div class="e-alert__title">Short title</div>
