--- a/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/dropdown-doc/dropdown-doc.component.html
@@ -68,10 +68,10 @@
             </div>
             <div>
               <span class="keyboard-button icon">
-                <i class="e-icon e-icon--arrow_up e-icon--xs" aria-hidden="true"></i>
+                <i class="e-icon e-icon--arrow_up e-icon--xs" aria-hidden="true" aria-hidden="true"></i>
               </span>
               <span class="keyboard-button icon" style="margin-left: 0px">
-                <i class="e-icon e-icon--arrow_down e-icon--xs" aria-hidden="true"></i>
+                <i class="e-icon e-icon--arrow_down e-icon--xs" aria-hidden="true" aria-hidden="true"></i>
               </span>
               should be used to navigate through the dropdown elements.
             </div>
