--- a/packages/web/src/app/doc-pages/components/header-doc/header-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/header-doc/header-doc.component.html
@@ -22,7 +22,7 @@
   <div class="e-mt-72">
     <div class="e-alert e-alert--local e-alert--info" role="alert">
       <div class="e-alert__icon">
-        <i class="e-icon e-icon--information_circle"></i>
+        <i class="e-icon e-icon--information_circle" aria-hidden="true"></i>
       </div>
       <div class="e-alert__content">
         <div class="e-alert__title">NB! This preview is not a finished working header.</div>
