--- a/packages/web/src/app/doc-pages/other-pages/faq-doc/faq-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/faq-doc/faq-doc.component.html
@@ -17,8 +17,8 @@
           <div class="e-accordion__label" (click)="toggleOpen('contribute')">
             <div class="e-accordion__title">How do I contribute or propose new components/ideas?</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -33,8 +33,8 @@
           <div class="e-accordion__label" (click)="toggleOpen('bugs')">
             <div class="e-accordion__title">How do I report bugs?</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -46,7 +46,9 @@
                 target="_blank"
               >
                 <span class="e-link__title">#designsystemet</span>
-                <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold"></i></span>
+                <span class="e-link__icon">
+                  <i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i>
+                </span>
               </a>
               . If you are a developer at Elvia you can also send requests or report bugs and issues through
               this
@@ -56,7 +58,9 @@
                 target="_blank"
               >
                 <span class="e-link__title">github form</span>
-                <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold"></i></span>
+                <span class="e-link__icon">
+                  <i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i>
+                </span>
               </a>
             </span>
           </div>
@@ -65,8 +69,8 @@
           <div class="e-accordion__label" (click)="toggleOpen('browsers')">
             <div class="e-accordion__title">Which browsers are supported?</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
