--- a/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
@@ -22,8 +22,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('talk')">
             <div class="e-accordion__title">Talk with us</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -40,7 +40,9 @@
                 target="_blank"
               >
                 <span class="e-link__title">#designsystemet</span>
-                <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold"></i></span>
+                <span class="e-link__icon">
+                  <i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i>
+                </span>
               </a>
             </span>
           </div>
@@ -51,8 +53,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('cdn')">
             <div class="e-accordion__title">Get started using CDN</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -86,14 +88,14 @@
           <div class="e-accordion__label" (click)="toggleAccordion('npm')">
             <div class="e-accordion__title">Alternative: Get started using NPM</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
             <div class="e-alert e-alert--local e-alert--warn e-mb-32" role="alert">
               <div class="e-alert__icon">
-                <i class="e-icon e-icon--warning_circle e-icon--color-orange"></i>
+                <i class="e-icon e-icon--warning_circle e-icon--color-orange" aria-hidden="true"></i>
               </div>
               <div class="e-alert__content">
                 <div class="e-alert__title">Not recommended</div>
@@ -141,8 +143,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('css-vars')">
             <div class="e-accordion__title">Using CSS-variables</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -183,7 +185,9 @@
                       target="_blank"
                     >
                       <span class="e-link__title">Ponyfill documentation here.</span>
-                      <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold"></i></span>
+                      <span class="e-link__icon">
+                        <i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i>
+                      </span>
                     </a>
                   </span>
                 </p>
@@ -197,8 +201,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('font')">
             <div class="e-accordion__title">Font</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -220,8 +224,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('icons')">
             <div class="e-accordion__title">Icons</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -270,8 +274,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('figma')">
             <div class="e-accordion__title">Figma</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -285,7 +289,9 @@
                   target="_blank"
                 >
                   <span class="e-link__title">download the app</span>
-                  <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold"></i></span>
+                  <span class="e-link__icon">
+                    <i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i>
+                  </span>
                 </a>
                 for the full experience. If you have any issues accessing the
                 <a
@@ -294,7 +300,9 @@
                   target="_blank"
                 >
                   <span class="e-link__title">Elvia library</span>
-                  <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold"></i></span>
+                  <span class="e-link__icon">
+                    <i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i>
+                  </span>
                 </a>
                 , just ask someone in the team and we’ll send you an invite. We can of course also help you
                 set up libraries in Figma if you’re new to it.
@@ -315,8 +323,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('brand-design-concept')">
             <div class="e-accordion__title">Elvia brand and design concept</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -345,7 +353,9 @@
               fully charged. You can read more about the brand on
               <a class="e-link e-link--inline e-link--new-tab" href="https://brand.elvia.io/" target="_blank">
                 <span class="e-link__title">brand.elvia.io.</span>
-                <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold"></i></span>
+                <span class="e-link__icon">
+                  <i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i>
+                </span>
               </a>
             </div>
           </div>
@@ -356,8 +366,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('colors-style')">
             <div class="e-accordion__title">Colors and style</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -381,7 +391,9 @@
                 target="_blank"
               >
                 <span class="e-link__title">Red Hat can be downloaded here</span>
-                <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold"></i></span>
+                <span class="e-link__icon">
+                  <i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i>
+                </span>
               </a>
               via Google Fonts. You can read more about our usage of it on our
               <a class="e-link e-link--inline" [routerLink]="['/brand/typography']">typography page.</a>
@@ -403,8 +415,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('grid-breakpoints')">
             <div class="e-accordion__title">Grid and breakpoints</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -419,7 +431,9 @@
                 target="_blank"
               >
                 <span class="e-link__title">an intro to the 8 point grid.</span>
-                <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold"></i></span>
+                <span class="e-link__icon">
+                  <i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i>
+                </span>
               </a>
               Through the 8 point grid we can ensure higher consistency through using multiples of 8 to space
               out elements. This helps us define dimensions, paddings and margin to make sure that both
@@ -441,8 +455,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('design-elvia')">
             <div class="e-accordion__title">Design in Elvia</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -492,8 +506,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('useful-terms')">
             <div class="e-accordion__title">Useful terms</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -531,8 +545,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('logging-in')">
             <div class="e-accordion__title">Sign in</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -561,8 +575,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('cotentful-structure')">
             <div class="e-accordion__title">Contentful structure</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -648,8 +662,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('contentful-types')">
             <div class="e-accordion__title">Useful models and how to's</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -730,8 +744,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('contentful-publish')">
             <div class="e-accordion__title">Publishing & previews</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -785,8 +799,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('contentful-delete')">
             <div class="e-accordion__title">Deleting entries</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -822,8 +836,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('contentful-errors')">
             <div class="e-accordion__title">Errors</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
