--- a/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/layout-doc/layout-doc.component.html
@@ -316,7 +316,7 @@
               href="https://getbootstrap.com/docs/4.4/layout/grid/"
             >
               <span class="e-link__title">Bootstrap documentation</span>
-              <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold"></i></span>
+              <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i></span>
             </a>
             . All the Bootstrap grid-system classes are available for use. To use the grid-system add the
             e-grid class on a wrapper element. The bootstrap-classes will only work inside this wrapper, and
@@ -330,8 +330,8 @@
                 <div class="e-accordion__label" (click)="toggleAccordion('Breakpoints')">
                   <div class="e-accordion__title">Breakpoints</div>
                   <div class="e-accordion__icon">
-                    <i class="e-icon e-icon--expand_circle-color"></i>
-                    <i class="e-icon e-icon--expand_circle-filled-color"></i>
+                    <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+                    <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
                   </div>
                 </div>
                 <div class="e-accordion__content">
@@ -348,8 +348,8 @@
                 <div class="e-accordion__label" (click)="toggleAccordion('Layout')">
                   <div class="e-accordion__title">Layout</div>
                   <div class="e-accordion__icon">
-                    <i class="e-icon e-icon--expand_circle-color"></i>
-                    <i class="e-icon e-icon--expand_circle-filled-color"></i>
+                    <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+                    <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
                   </div>
                 </div>
                 <div class="e-accordion__content">
@@ -402,8 +402,8 @@
                 <div class="e-accordion__label" (click)="toggleAccordion('Gutters')">
                   <div class="e-accordion__title">Gutters</div>
                   <div class="e-accordion__icon">
-                    <i class="e-icon e-icon--expand_circle-color"></i>
-                    <i class="e-icon e-icon--expand_circle-filled-color"></i>
+                    <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+                    <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
                   </div>
                 </div>
                 <div class="e-accordion__content">
@@ -459,8 +459,8 @@
                 <div class="e-accordion__label" (click)="toggleAccordion('Margins')">
                   <div class="e-accordion__title">Margins</div>
                   <div class="e-accordion__icon">
-                    <i class="e-icon e-icon--expand_circle-color"></i>
-                    <i class="e-icon e-icon--expand_circle-filled-color"></i>
+                    <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
+                    <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
                   </div>
                 </div>
                 <div class="e-accordion__content">
@@ -654,8 +654,8 @@
         <a class="e-link e-link--action" [routerLink]="['/components/box']">
           <span class="e-link__title">See box component</span>
           <span class="e-link__icon">
-            <i class="e-icon e-icon--arrow_right_circle-color"></i>
-            <i class="e-icon e-icon--arrow_right_circle-filled-color"></i>
+            <i class="e-icon e-icon--arrow_right_circle-color" aria-hidden="true"></i>
+            <i class="e-icon e-icon--arrow_right_circle-filled-color" aria-hidden="true"></i>
           </span>
         </a>
       </div>
