--- a/packages/web/src/app/doc-pages/other-pages/the-design-system-doc/the-design-system-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/the-design-system-doc/the-design-system-doc.component.html
@@ -19,7 +19,7 @@
     <ng-container ngProjectAs="sectionContent">
       <div class="quoteContainer e-mb-72">
         <div>
-          <i class="e-icon e-icon--quotation-color e-icon--lg"></i>
+          <i class="e-icon e-icon--quotation-color e-icon--lg" aria-hidden="true"></i>
         </div>
         <div class="quoteText e-text-quote">
           The toolbox that makes the everyday life easier and contributes to great user experiences
