--- a/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.html
@@ -2,7 +2,7 @@
   <div class="component-header">
     <div class="back-link e-mb-24">
       <a class="e-link e-link--sm" [routerLink]="'/' + [currentRoute]">
-        <span class="e-link__icon"><i class="e-icon e-icon--arrow_left-bold"></i></span>
+        <span class="e-link__icon"><i class="e-icon e-icon--arrow_left-bold" aria-hidden="true"></i></span>
         <span class="e-link__title">{{ backBtn | titlecase }}</span>
       </a>
     </div>
