--- a/packages/web/src/app/shared/do-dont/do-dont.component.html
+++ b/packages/web/src/app/shared/do-dont/do-dont.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="instructions do">
       <span style="display: flex; align-items: center">
-        <i class="e-icon e-icon--check_circle e-icon--sm e-icon--color-green"></i>
+        <i class="e-icon e-icon--check_circle e-icon--sm e-icon--color-green" aria-hidden="true"></i>
       </span>
       <p class="e-text-body">Do this!</p>
     </div>
@@ -26,7 +26,7 @@
     </div>
     <div class="instructions dont">
       <span style="display: flex; align-items: center">
-        <i class="e-icon e-icon--remove_circle e-icon--sm e-icon--color-red"></i>
+        <i class="e-icon e-icon--remove_circle e-icon--sm e-icon--color-red" aria-hidden="true"></i>
       </span>
       <p class="e-text-body">Don't do this!</p>
     </div>
