--- a/packages/web/src/app/shell/header/header.component.html
+++ b/packages/web/src/app/shell/header/header.component.html
@@ -49,7 +49,7 @@
   <div class="external-links">
     <div class="tabs-links elvis-search e-mr-24" (click)="openSearchMenu()">
       <span class="elvis-search__icon e-mr-8">
-        <i class="e-icon e-icon--search-bold e-icon--xs e-icon--inverted"></i>
+        <i class="e-icon e-icon--search-bold e-icon--xs e-icon--inverted" aria-hidden="true"></i>
       </span>
       <span class="elvis-search__title">Search</span>
     </div>
@@ -61,7 +61,7 @@
   <div class="mobile-menu">
     <div class="tabs-links elvis-search e-mr-24" (click)="openSearchMenu()">
       <span class="elvis-search__icon e-mr-8">
-        <i class="e-icon e-icon--search-bold e-icon--sm e-icon--inverted"></i>
+        <i class="e-icon e-icon--search-bold e-icon--sm e-icon--inverted" aria-hidden="true"></i>
       </span>
     </div>
     <button class="menu-button" (click)="openMobileMenu()">
@@ -84,8 +84,8 @@
         >
           <span>DROPS</span>
           <span class="e-header__top-bar-mobile__link-icon">
-            <i class="e-icon e-icon--arrow_down-bold"></i>
-            <i class="e-icon e-icon--arrow_up-bold"></i>
+            <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
+            <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
           </span>
         </a>
       </div>
@@ -100,8 +100,8 @@
         >
           <span>Sør</span>
           <span class="e-header__top-bar-mobile__link-icon">
-            <i class="e-icon e-icon--arrow_down-bold"></i>
-            <i class="e-icon e-icon--arrow_up-bold"></i>
+            <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
+            <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
           </span>
         </a>
       </div>
@@ -113,11 +113,11 @@
         <div class="e-header__top-bar-mobile__user-menu">
           <div class="e-header__top-bar-mobile__user-menu-name">Ragna Nordmann (e55717@hafslund.no)</div>
           <div class="e-header__top-bar-mobile__user-menu-settings">
-            <i class="e-icon e-icon--cog e-icon--xs"></i>
+            <i class="e-icon e-icon--cog e-icon--xs" aria-hidden="true"></i>
             Settings
           </div>
           <div class="e-header__top-bar-mobile__user-menu-logout">
-            <i class="e-icon e-icon--logout e-icon--xs"></i>
+            <i class="e-icon e-icon--logout e-icon--xs" aria-hidden="true"></i>
             Log out
           </div>
         </div>
@@ -142,8 +142,8 @@
               >
                 <span>Drops</span>
                 <span class="e-header__top-bar-desktop__link-icon">
-                  <i class="e-icon e-icon--arrow_down-bold"></i>
-                  <i class="e-icon e-icon--arrow_up-bold"></i>
+                  <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
+                  <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
                 </span>
               </a>
               <div class="e-header__top-bar-desktop__app-menu">
@@ -197,8 +197,8 @@
               >
                 <span>Elvia South</span>
                 <span class="e-header__top-bar-desktop__link-icon">
-                  <i class="e-icon e-icon--arrow_down-bold"></i>
-                  <i class="e-icon e-icon--arrow_up-bold"></i>
+                  <i class="e-icon e-icon--arrow_down-bold" aria-hidden="true"></i>
+                  <i class="e-icon e-icon--arrow_up-bold" aria-hidden="true"></i>
                 </span>
               </a>
               <div class="e-header__top-bar-desktop__area-menu">
@@ -214,18 +214,18 @@
                 class="e-header__top-bar-desktop__link"
                 (click)="toggleElement('.e-header__top-bar-desktop', 'e-header__top-bar-desktop__user--open')"
               >
-                <span><i class="e-icon e-icon--profile-bold e-icon--xs"></i></span>
+                <span><i class="e-icon e-icon--profile-bold e-icon--xs" aria-hidden="true"></i></span>
                 <span>Ragna Nordmann</span>
               </a>
               <div class="e-header__top-bar-desktop__user-menu">
                 <div class="e-header__top-bar-desktop__user-menu-name">Ragna Nordmann</div>
                 <div class="e-header__top-bar-desktop__user-menu-mail">e55717@hafslund.no</div>
                 <div class="e-header__top-bar-desktop__user-menu-settings">
-                  <i class="e-icon e-icon--cog e-icon--xs"></i>
+                  <i class="e-icon e-icon--cog e-icon--xs" aria-hidden="true"></i>
                   Settings
                 </div>
                 <div class="e-header__top-bar-desktop__user-menu-logout">
-                  <i class="e-icon e-icon--logout e-icon--xs"></i>
+                  <i class="e-icon e-icon--logout e-icon--xs" aria-hidden="true"></i>
                   Log out
                 </div>
               </div>
@@ -235,10 +235,15 @@
           <!--HAMBURGER-->
           <div class="col-xs-2 col-sm-3 col-md-3">
             <div class="e-header__top-bar-desktop__hamburger">
-              <i class="e-icon e-icon--menu-bold" (click)="toggleElement('.e-header', 'e-header--open')"></i>
+              <i
+                class="e-icon e-icon--menu-bold"
+                (click)="toggleElement('.e-header', 'e-header--open')"
+                aria-hidden="true"
+              ></i>
               <i
                 class="e-icon e-icon--remove_circle-color"
                 (click)="toggleElement('.e-header', 'e-header--open')"
+                aria-hidden="true"
               ></i>
             </div>
           </div>
@@ -252,29 +257,29 @@
     <!--APPS-->
     <div class="e-header__sidebar__item">
       <span class="e-header__sidebar__icon">
-        <i class="e-icon e-icon--dashboard"></i>
-        <i class="e-icon e-icon--dashboard-color"></i>
+        <i class="e-icon e-icon--dashboard" aria-hidden="true"></i>
+        <i class="e-icon e-icon--dashboard-color" aria-hidden="true"></i>
       </span>
       <span class="e-header__sidebar__text">Overview</span>
     </div>
     <div class="e-header__sidebar__item">
       <span class="e-header__sidebar__icon">
-        <i class="e-icon e-icon--search"></i>
-        <i class="e-icon e-icon--search-color"></i>
+        <i class="e-icon e-icon--search" aria-hidden="true"></i>
+        <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
       </span>
       <span class="e-header__sidebar__text">Search</span>
     </div>
     <div class="e-header__sidebar__item e-header__sidebar__item--active">
       <span class="e-header__sidebar__icon">
-        <i class="e-icon e-icon--pin"></i>
-        <i class="e-icon e-icon--pin-color"></i>
+        <i class="e-icon e-icon--pin" aria-hidden="true"></i>
+        <i class="e-icon e-icon--pin-color" aria-hidden="true"></i>
       </span>
       <span class="e-header__sidebar__text">Analysis</span>
     </div>
     <div class="e-header__sidebar__item">
       <span class="e-header__sidebar__icon">
-        <i class="e-icon e-icon--graph_bar"></i>
-        <i class="e-icon e-icon--graph_bar-color"></i>
+        <i class="e-icon e-icon--graph_bar" aria-hidden="true"></i>
+        <i class="e-icon e-icon--graph_bar-color" aria-hidden="true"></i>
       </span>
       <span class="e-header__sidebar__text">Statistics</span>
     </div>
@@ -285,8 +290,8 @@
       (click)="toggleElement('.e-header__sidebar', 'e-header__sidebar--open')"
     >
       <span class="e-header__sidebar__icon">
-        <i class="e-icon e-icon--open_menu"></i>
-        <i class="e-icon e-icon--close_menu"></i>
+        <i class="e-icon e-icon--open_menu" aria-hidden="true"></i>
+        <i class="e-icon e-icon--close_menu" aria-hidden="true"></i>
       </span>
       <span class="e-header__sidebar__text">Minimize</span>
     </div>
