--- a/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.html
+++ b/packages/web/src/app/shell/header/mobile-menu/mobile-menu.component.html
@@ -11,8 +11,8 @@
       aria-label="Close menu"
     >
       <span class="e-btn__icon">
-        <i class="e-icon e-icon--remove_circle-color" aria-hidden="true"></i>
-        <i class="e-icon e-icon--remove_circle-filled-color" aria-hidden="true"></i>
+        <i class="e-icon e-icon--remove_circle-color" aria-hidden="true" aria-hidden="true"></i>
+        <i class="e-icon e-icon--remove_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
       </span>
     </button>
   </div>
@@ -24,7 +24,7 @@
       <div class="links e-pt-24 e-pb-24" (click)="navigate(menuItem.path)">
         <span class="text">{{ menuItem.title }}</span>
         <span class="links-icon">
-          <i class="e-icon e-icon--arrow_right-bold e-icon--xxs"></i>
+          <i class="e-icon e-icon--arrow_right-bold e-icon--xxs" aria-hidden="true"></i>
         </span>
       </div>
       <div class="divider"></div>
