--- a/packages/elvis/percy/components/chip.html
+++ b/packages/elvis/percy/components/chip.html
@@ -10,21 +10,21 @@
     <div class="e-title-sm e-my-16">Chip</div>
     <button class="e-chip">
       <div class="e-chip__label">Chip</div>
-      <div class="e-chip__close"><i class="e-icon e-icon--close-bold"></i></div>
+      <div class="e-chip__close"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></div>
     </button>
     <button class="e-chip e-chip--blue-berry e-mt-16">
       <div class="e-chip__label">Chip</div>
-      <div class="e-chip__close"><i class="e-icon e-icon--close-bold"></i></div>
+      <div class="e-chip__close"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></div>
     </button>
 
     <div class="e-title-sm e-my-16">States</div>
     <button class="e-chip e-chip---hover">
       <div class="e-chip__label">Chip</div>
-      <div class="e-chip__close"><i class="e-icon e-icon--close-bold"></i></div>
+      <div class="e-chip__close"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></div>
     </button>
     <button class="e-chip e-chip---disabled e-mt-16">
       <div class="e-chip__label">Chip</div>
-      <div class="e-chip__close"><i class="e-icon e-icon--close-bold"></i></div>
+      <div class="e-chip__close"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></div>
     </button>
   </body>
 </html>
