--- a/packages/elvis/percy/components/file-upload.html
+++ b/packages/elvis/percy/components/file-upload.html
@@ -11,13 +11,13 @@
     <div class="e-title-xs e-my-16">Before hover</div>
     <div class="e-fileupload" style="width: 380px">
       <div class="e-fileupload__icon">
-        <i class="e-icon e-icon--image_add-color"></i>
+        <i class="e-icon e-icon--image_add-color" aria-hidden="true"></i>
       </div>
       <div class="e-fileupload__description">Dra og slipp eller</div>
       <div class="e-fileupload__input">
         <input type="file" id="fileUploadTemplate" />
         <label for="fileUploadTemplate">
-          <i class="e-icon e-icon--download"></i>
+          <i class="e-icon e-icon--download" aria-hidden="true"></i>
           Velg fil
         </label>
       </div>
@@ -25,13 +25,13 @@
     <div class="e-title-xs e-my-16">When hovering</div>
     <div class="e-fileupload e-fileupload---hover" style="width: 380px">
       <div class="e-fileupload__icon">
-        <i class="e-icon e-icon--image_add-color"></i>
+        <i class="e-icon e-icon--image_add-color" aria-hidden="true"></i>
       </div>
       <div class="e-fileupload__description">Dra og slipp eller</div>
       <div class="e-fileupload__input">
         <input type="file" id="fileUploadTemplate" />
         <label for="fileUploadTemplate">
-          <i class="e-icon e-icon--download"></i>
+          <i class="e-icon e-icon--download" aria-hidden="true"></i>
           Velg fil
         </label>
       </div>
