--- a/packages/elvis/percy/components/search.html
+++ b/packages/elvis/percy/components/search.html
@@ -1,209 +1,141 @@
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Elvia Percytest</title>
+    <link rel="stylesheet" type="text/css" href="../../css/elvis.min.css" />
+    <script src="../../elvis.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0"
-  />
-  <title>Elvia Percytest</title>
-  <link
-    rel="stylesheet"
-    type="text/css"
-    href="../../css/elvis.min.css"
-  />
-  <script src="../../elvis.js"></script>
-</head>
-
-<body>
-  <div class="e-title-sm e-mt-16">Search</div>
-  <div class="e-title-xs e-my-16">Instant Search</div>
-  <div class="e-form-field">
-    <div
-      class="e-search e-search--instant"
-      style="width: 250px"
-    >
-      <div class="e-input">
-        <input
-          id="compact"
-          type="text"
-          placeholder="Placeholder text"
-        />
-      </div>
-      <i class="e-icon e-icon--search-color"></i>
-      <button class="e-btn e-btn--icon">
-        <span class="e-btn__icon"><i class="e-icon e-icon--close-bold"></i></span>
-      </button>
-    </div>
-  </div>
-
-  <div class="e-form-field e-form-field--compact e-mt-24">
-    <div
-      class="e-search e-search--instant"
-      style="width: 250px"
-    >
-      <div class="e-input">
-        <input
-          id="compact"
-          type="text"
-          placeholder="Placeholder text"
-        />
-      </div>
-      <i class="e-icon e-icon--search-color"></i>
-      <button class="e-btn e-btn--icon">
-        <span class="e-btn__icon"><i class="e-icon e-icon--close-bold"></i></span>
-      </button>
-    </div>
-  </div>
-
-  <div class="e-form-field e-my-16">
-    <div
-      class="e-search e-search--instant e-search--searched"
-      style="width: 250px"
-    >
-      <div class="e-input">
-        <input
-          id="compact"
-          type="text"
-          placeholder="Placeholder text"
-        />
-      </div>
-      <i class="e-icon e-icon--search-color"></i>
-      <button class="e-btn e-btn--icon">
-        <span class="e-btn__icon"><i class="e-icon e-icon--close-bold"></i></span>
-      </button>
-    </div>
-  </div>
-
-  <div class="e-form-field e-form-field--compact e-mt-24">
-    <div
-      class="e-search e-search--instant e-search--searched"
-      style="width: 250px"
-    >
-      <div class="e-input">
-        <input
-          id="compact"
-          type="text"
-          placeholder="Placeholder text"
-        />
-      </div>
-      <i class="e-icon e-icon--search-color"></i>
-      <button class="e-btn e-btn--icon">
-        <span class="e-btn__icon"><i class="e-icon e-icon--close-bold"></i></span>
-      </button>
-    </div>
-  </div>
-  <div class="e-title-xs e-my-16">On Submit Search</div>
-  <div class="e-inlined-field">
-    <div class="e-form-field e-form-field--width-auto">
-      <div
-        class="e-search e-search--on-submit"
-        style="width: 250px"
-      >
+  <body>
+    <div class="e-title-sm e-mt-16">Search</div>
+    <div class="e-title-xs e-my-16">Instant Search</div>
+    <div class="e-form-field">
+      <div class="e-search e-search--instant" style="width: 250px">
         <div class="e-input">
-          <input
-            aria-label="Search"
-            type="search"
-            placeholder="Search"
-          />
+          <input id="compact" type="text" placeholder="Placeholder text" />
         </div>
+        <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
         <button class="e-btn e-btn--icon">
-          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold"></i></span>
+          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
         </button>
       </div>
     </div>
-    <button class="e-btn e-btn--lg e-ml-16">
-      <span class="e-btn__icon">
-        <i class="e-icon e-icon--search-color e-icon--inverted"></i>
-        <i class="e-icon e-icon--search-color"></i>
-      </span>
-      <span class="e-btn__title">Search</span>
-    </button>
-  </div>
 
-
-  <div class="e-inlined-field e-my-16">
-    <div class="e-form-field e-form-field--width-auto e-form-field--compact">
-      <div
-        class="e-search e-search--on-submit "
-        style="width: 250px"
-      >
+    <div class="e-form-field e-form-field--compact e-mt-24">
+      <div class="e-search e-search--instant" style="width: 250px">
         <div class="e-input">
-          <input
-            aria-label="Search"
-            type="search"
-            placeholder="Search"
-          />
+          <input id="compact" type="text" placeholder="Placeholder text" />
         </div>
+        <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
         <button class="e-btn e-btn--icon">
-          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold"></i></span>
+          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
         </button>
       </div>
     </div>
-    <button class="e-btn e-btn--sm e-ml-16">
-      <span class="e-btn__icon">
-        <i class="e-icon e-icon--search-color e-icon--inverted"></i>
-        <i class="e-icon e-icon--search-color"></i>
-      </span>
-      <span class="e-btn__title">Search</span>
-    </button>
-  </div>
 
-  <div class="e-inlined-field">
-    <div class="e-form-field e-form-field--width-auto">
-      <div
-        class="e-search e-search--on-submit e-search--searched"
-        style="width: 250px"
-      >
+    <div class="e-form-field e-my-16">
+      <div class="e-search e-search--instant e-search--searched" style="width: 250px">
         <div class="e-input">
-          <input
-            aria-label="Search"
-            type="search"
-            placeholder="Search"
-          />
+          <input id="compact" type="text" placeholder="Placeholder text" />
         </div>
+        <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
         <button class="e-btn e-btn--icon">
-          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold"></i></span>
+          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
         </button>
       </div>
     </div>
-    <button class="e-btn e-btn--lg e-ml-16">
-      <span class="e-btn__icon">
-        <i class="e-icon e-icon--search-color e-icon--inverted"></i>
-        <i class="e-icon e-icon--search-color"></i>
-      </span>
-      <span class="e-btn__title">Search</span>
-    </button>
-  </div>
 
-
-  <div class="e-inlined-field e-my-16">
-    <div class="e-form-field e-form-field--width-auto e-form-field--compact">
-      <div
-        class="e-search e-search--on-submit e-search--searched"
-        style="width: 250px"
-      >
+    <div class="e-form-field e-form-field--compact e-mt-24">
+      <div class="e-search e-search--instant e-search--searched" style="width: 250px">
         <div class="e-input">
-          <input
-            aria-label="Search"
-            type="search"
-            placeholder="Search"
-          />
+          <input id="compact" type="text" placeholder="Placeholder text" />
         </div>
+        <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
         <button class="e-btn e-btn--icon">
-          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold"></i></span>
+          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
         </button>
       </div>
     </div>
-    <button class="e-btn e-btn--sm e-ml-16">
-      <span class="e-btn__icon">
-        <i class="e-icon e-icon--search-color e-icon--inverted"></i>
-        <i class="e-icon e-icon--search-color"></i>
-      </span>
-      <span class="e-btn__title">Search</span>
-    </button>
-  </div>
+    <div class="e-title-xs e-my-16">On Submit Search</div>
+    <div class="e-inlined-field">
+      <div class="e-form-field e-form-field--width-auto">
+        <div class="e-search e-search--on-submit" style="width: 250px">
+          <div class="e-input">
+            <input aria-label="Search" type="search" placeholder="Search" />
+          </div>
+          <button class="e-btn e-btn--icon">
+            <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+          </button>
+        </div>
+      </div>
+      <button class="e-btn e-btn--lg e-ml-16">
+        <span class="e-btn__icon">
+          <i class="e-icon e-icon--search-color e-icon--inverted" aria-hidden="true"></i>
+          <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        </span>
+        <span class="e-btn__title">Search</span>
+      </button>
+    </div>
 
-</body>
+    <div class="e-inlined-field e-my-16">
+      <div class="e-form-field e-form-field--width-auto e-form-field--compact">
+        <div class="e-search e-search--on-submit" style="width: 250px">
+          <div class="e-input">
+            <input aria-label="Search" type="search" placeholder="Search" />
+          </div>
+          <button class="e-btn e-btn--icon">
+            <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+          </button>
+        </div>
+      </div>
+      <button class="e-btn e-btn--sm e-ml-16">
+        <span class="e-btn__icon">
+          <i class="e-icon e-icon--search-color e-icon--inverted" aria-hidden="true"></i>
+          <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        </span>
+        <span class="e-btn__title">Search</span>
+      </button>
+    </div>
 
+    <div class="e-inlined-field">
+      <div class="e-form-field e-form-field--width-auto">
+        <div class="e-search e-search--on-submit e-search--searched" style="width: 250px">
+          <div class="e-input">
+            <input aria-label="Search" type="search" placeholder="Search" />
+          </div>
+          <button class="e-btn e-btn--icon">
+            <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+          </button>
+        </div>
+      </div>
+      <button class="e-btn e-btn--lg e-ml-16">
+        <span class="e-btn__icon">
+          <i class="e-icon e-icon--search-color e-icon--inverted" aria-hidden="true"></i>
+          <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        </span>
+        <span class="e-btn__title">Search</span>
+      </button>
+    </div>
+
+    <div class="e-inlined-field e-my-16">
+      <div class="e-form-field e-form-field--width-auto e-form-field--compact">
+        <div class="e-search e-search--on-submit e-search--searched" style="width: 250px">
+          <div class="e-input">
+            <input aria-label="Search" type="search" placeholder="Search" />
+          </div>
+          <button class="e-btn e-btn--icon">
+            <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+          </button>
+        </div>
+      </div>
+      <button class="e-btn e-btn--sm e-ml-16">
+        <span class="e-btn__icon">
+          <i class="e-icon e-icon--search-color e-icon--inverted" aria-hidden="true"></i>
+          <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        </span>
+        <span class="e-btn__title">Search</span>
+      </button>
+    </div>
+  </body>
 </html>
