--- a/packages/web/src/app/doc-pages/components/button-doc/button-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/button-doc/button-doc.component.html
@@ -91,14 +91,20 @@
               ></app-component-example-v1>
               The following icons are examples of typical circled icon button usage:
               <div class="e-mt-16">
-                <i class="e-icon e-icon--information_circle e-icon--sm e-mr-16"></i>
-                <i class="e-icon e-icon--remove_circle e-icon--sm e-mr-16"></i>
-                <i class="e-icon e-icon--question_circle e-icon--sm"></i>
+                <i class="e-icon e-icon--information_circle e-icon--sm e-mr-16" aria-hidden="true"></i>
+                <i class="e-icon e-icon--remove_circle e-icon--sm e-mr-16" aria-hidden="true"></i>
+                <i class="e-icon e-icon--question_circle e-icon--sm" aria-hidden="true"></i>
               </div>
               <div>
-                <i class="e-icon e-icon--information_circle-filled-color e-icon--sm e-mr-16"></i>
-                <i class="e-icon e-icon--remove_circle-filled-color e-icon--sm e-mr-16"></i>
-                <i class="e-icon e-icon--question_circle-filled-color e-icon--sm"></i>
+                <i
+                  class="e-icon e-icon--information_circle-filled-color e-icon--sm e-mr-16"
+                  aria-hidden="true"
+                ></i>
+                <i
+                  class="e-icon e-icon--remove_circle-filled-color e-icon--sm e-mr-16"
+                  aria-hidden="true"
+                ></i>
+                <i class="e-icon e-icon--question_circle-filled-color e-icon--sm" aria-hidden="true"></i>
               </div>
             </ng-container>
           </app-component-subsubsection>
@@ -193,32 +199,35 @@
             <ng-container ngProjectAs="do">
               <button class="e-btn e-mr-16 e-mt-8">
                 <span class="e-btn__icon">
-                  <i class="e-icon e-icon--profile e-icon--inverted"></i>
-                  <i class="e-icon e-icon--profile"></i>
+                  <i class="e-icon e-icon--profile e-icon--inverted" aria-hidden="true"></i>
+                  <i class="e-icon e-icon--profile" aria-hidden="true"></i>
                 </span>
                 <span class="e-btn__title">My page</span>
               </button>
               <button class="e-btn e-mt-8">
                 <span class="e-btn__title">Next</span>
                 <span class="e-btn__icon">
-                  <i class="e-icon e-icon--arrow_right-bold e-icon--inverted e-btn--xs"></i>
-                  <i class="e-icon e-icon--arrow_right-bold e-btn--xs"></i>
+                  <i
+                    class="e-icon e-icon--arrow_right-bold e-icon--inverted e-btn--xs"
+                    aria-hidden="true"
+                  ></i>
+                  <i class="e-icon e-icon--arrow_right-bold e-btn--xs" aria-hidden="true"></i>
                 </span>
               </button>
             </ng-container>
             <ng-container ngProjectAs="dont">
               <button class="e-btn e-mr-16 e-mt-8">
                 <span class="e-btn__icon">
-                  <i class="e-icon e-icon--mail_send-color e-icon--inverted"></i>
-                  <i class="e-icon e-icon--mail_send-color"></i>
+                  <i class="e-icon e-icon--mail_send-color e-icon--inverted" aria-hidden="true"></i>
+                  <i class="e-icon e-icon--mail_send-color" aria-hidden="true"></i>
                 </span>
                 <span class="e-btn__title">Send</span>
               </button>
               <button class="e-btn e-mt-8">
                 <span class="e-btn__title">Log in</span>
                 <span class="e-btn__icon">
-                  <i class="e-icon e-icon--lock e-icon--inverted"></i>
-                  <i class="e-icon e-icon--lock"></i>
+                  <i class="e-icon e-icon--lock e-icon--inverted" aria-hidden="true"></i>
+                  <i class="e-icon e-icon--lock" aria-hidden="true"></i>
                 </span>
               </button>
             </ng-container>
