--- a/packages/web/src/app/doc-pages/components/forms/segmented-controls-doc/segmented-controls-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/segmented-controls-doc/segmented-controls-doc.component.html
@@ -80,17 +80,17 @@
           <div class="accessibility-keyboard-navigation">
             <div>
               <span class="keyboard-button icon">
-                <i class="e-icon e-icon--arrow_left e-icon--xs" aria-hidden="true"></i>
+                <i class="e-icon e-icon--arrow_left e-icon--xs" aria-hidden="true" aria-hidden="true"></i>
               </span>
               <span class="keyboard-button icon" style="margin-left: 0px">
-                <i class="e-icon e-icon--arrow_right e-icon--xs" aria-hidden="true"></i>
+                <i class="e-icon e-icon--arrow_right e-icon--xs" aria-hidden="true" aria-hidden="true"></i>
               </span>
               or
               <span class="keyboard-button icon">
-                <i class="e-icon e-icon--arrow_up e-icon--xs" aria-hidden="true"></i>
+                <i class="e-icon e-icon--arrow_up e-icon--xs" aria-hidden="true" aria-hidden="true"></i>
               </span>
               <span class="keyboard-button icon" style="margin-left: 0px">
-                <i class="e-icon e-icon--arrow_down e-icon--xs" aria-hidden="true"></i>
+                <i class="e-icon e-icon--arrow_down e-icon--xs" aria-hidden="true" aria-hidden="true"></i>
               </span>
               to navigate between the segmented controls options.
             </div>
