--- a/packages/web/src/app/doc-pages/components/position-picker-doc/position-picker-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/position-picker-doc/position-picker-doc.component.html
@@ -13,12 +13,14 @@
     <div class="e-position-picker" style="width: 300px">
       <div class="e-position-picker__icon" *ngIf="!showPosition">
         <span class="e-btn__icon">
-          <i class="e-icon e-icon--map_pin-color e-icon--lg" aria-hidden="true"></i>
+          <i class="e-icon e-icon--map_pin-color e-icon--lg" aria-hidden="true" aria-hidden="true"></i>
         </span>
       </div>
       <div class="e-position-picker__action">
         <button class="e-btn e-btn--tertiary">
-          <span class="e-btn__icon"><i class="e-icon e-icon--add_circle" aria-hidden="true"></i></span>
+          <span class="e-btn__icon">
+            <i class="e-icon e-icon--add_circle" aria-hidden="true" aria-hidden="true"></i>
+          </span>
           <span class="e-btn__title">Add position</span>
         </button>
       </div>
