--- a/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
@@ -111,8 +111,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('accordion-accordion')">
             <div class="e-accordion__title">Accordion</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -132,7 +132,7 @@
                 >
                   <span class="e-link__title">Figma</span>
                   <span class="e-link__icon">
-                    <i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i>
+                    <i class="e-icon e-icon--new_tab-bold" aria-hidden="true" aria-hidden="true"></i>
                   </span>
                 </a>
               </li>
@@ -176,8 +176,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('accordion-alignment')">
             <div class="e-accordion__title">Alignment</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -193,8 +193,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('accordion-button')">
             <div class="e-accordion__title">Button</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -221,8 +221,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('accordion-checkbox')">
             <div class="e-accordion__title">Checkbox</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -265,8 +265,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('accordion-footnote')">
             <div class="e-accordion__title">Footnote</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -280,8 +280,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('accordion-input')">
             <div class="e-accordion__title">Input</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -308,8 +308,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('accordion-longColumn')">
             <div class="e-accordion__title">Long column</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -330,8 +330,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('accordion-sticky-header')">
             <div class="e-accordion__title">Sticky header</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -367,8 +367,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('accordion-noStripes')">
             <div class="e-accordion__title">No stripes</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -386,8 +386,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('accordion-numbers')">
             <div class="e-accordion__title">Numbers</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -405,8 +405,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('accordion-select')">
             <div class="e-accordion__title">Select</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -433,8 +433,8 @@
           <div class="e-accordion__label" (click)="toggleAccordion('accordion-sorting')">
             <div class="e-accordion__title">Sorting</div>
             <div class="e-accordion__icon">
-              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true"></i>
-              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-color" aria-hidden="true" aria-hidden="true"></i>
+              <i class="e-icon e-icon--expand_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
             </div>
           </div>
           <div class="e-accordion__content">
@@ -453,7 +453,7 @@
                 >
                   <span class="e-link__title">Figma</span>
                   <span class="e-link__icon">
-                    <i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i>
+                    <i class="e-icon e-icon--new_tab-bold" aria-hidden="true" aria-hidden="true"></i>
                   </span>
                 </a>
               </li>
