--- a/packages/web/src/app/doc-pages/components/tabs-doc/tabs-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/tabs-doc/tabs-doc.component.html
@@ -45,10 +45,10 @@
             </div>
             <div>
               <span class="keyboard-button icon">
-                <i class="e-icon e-icon--arrow_left e-icon--xs" aria-hidden="true"></i>
+                <i class="e-icon e-icon--arrow_left e-icon--xs" aria-hidden="true" aria-hidden="true"></i>
               </span>
               <span class="keyboard-button icon" style="margin-left: 0px">
-                <i class="e-icon e-icon--arrow_right e-icon--xs" aria-hidden="true"></i>
+                <i class="e-icon e-icon--arrow_right e-icon--xs" aria-hidden="true" aria-hidden="true"></i>
               </span>
               to navigate through the tabs. Will also select the tab if
               <span class="code-text">hasManualActivation</span>
