--- a/packages/web/src/app/doc-pages/components/tooltip-doc/tooltip-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/tooltip-doc/tooltip-doc.component.html
@@ -14,7 +14,7 @@
       <span class="e-tooltip">
         <button class="e-btn e-btn--icon e-btn--lg" aria-label="Vis tooltip">
           <span class="e-btn__icon">
-            <i class="e-icon e-icon--star" aria-hidden="true"></i>
+            <i class="e-icon e-icon--star" aria-hidden="true" aria-hidden="true"></i>
           </span>
         </button>
         <span class="e-tooltip__content">Favorite</span>
