--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.html
@@ -13,8 +13,8 @@
       </div>
       <button class="e-btn e-btn--icon e-btn--sm e-btn--inverted" (click)="copyCode()" aria-label="Copy code">
         <span class="e-btn__icon">
-          <i class="e-icon e-icon--copy" aria-hidden="true"></i>
-          <i class="e-icon e-icon--copy e-icon--inverted" aria-hidden="true"></i>
+          <i class="e-icon e-icon--copy" aria-hidden="true" aria-hidden="true"></i>
+          <i class="e-icon e-icon--copy e-icon--inverted" aria-hidden="true" aria-hidden="true"></i>
         </span>
       </button>
     </div>
@@ -51,7 +51,7 @@
       >
         <span class="e-link__title">Try in codepen</span>
         <span class="e-link__icon">
-          <i class="e-icon e-icon--new_tab-bold e-icon--inverted"></i>
+          <i class="e-icon e-icon--new_tab-bold e-icon--inverted" aria-hidden="true"></i>
         </span>
       </a>
     </form>
