--- a/packages/web/src/app/shared/component-documentation/component-installation/component-installation.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-installation/component-installation.component.html
@@ -1,6 +1,6 @@
 <div class="e-alert e-alert--info" role="alert">
   <div class="e-alert__icon">
-    <i class="e-icon e-icon--information_circle e-icon--color-grey"></i>
+    <i class="e-icon e-icon--information_circle e-icon--color-grey" aria-hidden="true"></i>
   </div>
   <div class="e-alert__content">
     <div class="e-alert__title">Angular</div>
