--- a/packages/web/src/app/shared/overview-page/overview-page.component.html
+++ b/packages/web/src/app/shared/overview-page/overview-page.component.html
@@ -10,18 +10,14 @@
       <a class="e-link e-link--action e-link--sm" [routerLink]="['/components/which-component']">
         <span class="e-link__title">Which component should I use?</span>
         <span class="e-link__icon">
-          <i class="e-icon e-icon--arrow_right_circle-color"></i>
-          <i class="e-icon e-icon--arrow_right_circle-filled-color"></i>
+          <i class="e-icon e-icon--arrow_right_circle-color" aria-hidden="true"></i>
+          <i class="e-icon e-icon--arrow_right_circle-filled-color" aria-hidden="true"></i>
         </span>
       </a>
     </div>
   </div>
   <div
-    class="
-      row
-      components-overview-cards components-overview-cards-animation
-      e-grid-gutters-ext e-grid-gutters-vertical
-    "
+    class="row components-overview-cards components-overview-cards-animation e-grid-gutters-ext e-grid-gutters-vertical"
   >
     <div class="col-sm-4 col-md-3 col-lg-3 col-xl-2dot4" *ngFor="let page of filteredPages">
       <a class="e-link e-link--card" *ngIf="page.absolutePath" [routerLink]="[page.absolutePath]">
