--- a/packages/web/src/app/shared/when-to-use/when-to-use.component.html
+++ b/packages/web/src/app/shared/when-to-use/when-to-use.component.html
@@ -2,7 +2,7 @@
   <div class="when-to-use" *ngIf="whens[0] != ''">
     <div class="e-title-caps" style="display: flex; flex-direction: row">
       <div class="e-mr-8">
-        <i class="e-icon e-icon--check_circle e-icon--xs e-icon--color-green"></i>
+        <i class="e-icon e-icon--check_circle e-icon--xs e-icon--color-green" aria-hidden="true"></i>
       </div>
       <div>When to use:</div>
     </div>
@@ -17,7 +17,7 @@
   <div class="when-not-to-use" *ngIf="whenNots[0] != ''">
     <div class="e-title-caps" style="display: flex; flex-direction: row">
       <div class="e-mr-8">
-        <i class="e-icon e-icon--remove_circle e-icon--xs e-icon--color-red"></i>
+        <i class="e-icon e-icon--remove_circle e-icon--xs e-icon--color-red" aria-hidden="true"></i>
       </div>
       <div>When not to use:</div>
     </div>
