--- a/packages/web/src/app/shell/footer/footer.component.html
+++ b/packages/web/src/app/shell/footer/footer.component.html
@@ -3,11 +3,7 @@
     <div class="e-grid">
       <div class="row no-gutters justify-content-center">
         <div
-          class="
-            d-md-none d-lg-none d-xl-none d-sm-block
-            col-xs-12 col-sm-8 col-sm-8-custom
-            e-text-info e-mb-40
-          "
+          class="d-md-none d-lg-none d-xl-none d-sm-block col-xs-12 col-sm-8 col-sm-8-custom e-text-info e-mb-40"
         >
           <div class="text-align-center">
             <div class="e-text-center">
@@ -19,7 +15,7 @@
               >
                 <span class="e-link__title">#designsystemet</span>
                 <span class="e-link__icon">
-                  <i class="e-icon e-icon--new_tab-bold e-icon--inverted"></i>
+                  <i class="e-icon e-icon--new_tab-bold e-icon--inverted" aria-hidden="true"></i>
                 </span>
               </a>
               or
@@ -73,7 +69,7 @@
               >
                 <span class="e-link__title">#designsystemet</span>
                 <span class="e-link__icon">
-                  <i class="e-icon e-icon--new_tab-bold e-icon--inverted"></i>
+                  <i class="e-icon e-icon--new_tab-bold e-icon--inverted" aria-hidden="true"></i>
                 </span>
               </a>
               or
