--- a/packages/web/src/app/shell/header/search-menu/search-menu.component.html
+++ b/packages/web/src/app/shell/header/search-menu/search-menu.component.html
@@ -23,7 +23,7 @@
   <div class="external-links">
     <div class="tabs-links active elvis-search e-mr-24" (click)="closeSearch()">
       <span class="elvis-search__icon e-mr-8">
-        <i class="e-icon e-icon--search-bold e-icon--xs"></i>
+        <i class="e-icon e-icon--search-bold e-icon--xs" aria-hidden="true"></i>
       </span>
       <span class="elvis-search__title">Search</span>
     </div>
@@ -40,8 +40,8 @@
         aria-label="Close search"
       >
         <span class="e-btn__icon">
-          <i class="e-icon e-icon--remove_circle-color" aria-hidden="true"></i>
-          <i class="e-icon e-icon--remove_circle-filled-color" aria-hidden="true"></i>
+          <i class="e-icon e-icon--remove_circle-color" aria-hidden="true" aria-hidden="true"></i>
+          <i class="e-icon e-icon--remove_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
         </span>
       </button>
     </div>
@@ -64,8 +64,8 @@
         aria-label="Close search"
       >
         <span class="e-btn__icon">
-          <i class="e-icon e-icon--remove_circle-color" aria-hidden="true"></i>
-          <i class="e-icon e-icon--remove_circle-filled-color" aria-hidden="true"></i>
+          <i class="e-icon e-icon--remove_circle-color" aria-hidden="true" aria-hidden="true"></i>
+          <i class="e-icon e-icon--remove_circle-filled-color" aria-hidden="true" aria-hidden="true"></i>
         </span>
       </button>
     </div>
@@ -83,7 +83,9 @@
           />
         </div>
         <button class="e-btn e-btn--icon" (click)="removeSearch()" aria-label="Empty search field">
-          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+          <span class="e-btn__icon">
+            <i class="e-icon e-icon--close-bold" aria-hidden="true" aria-hidden="true"></i>
+          </span>
         </button>
       </div>
     </div>
