--- a/packages/web/src/app/shell/home/home.component.html
+++ b/packages/web/src/app/shell/home/home.component.html
@@ -133,8 +133,8 @@
           <a class="e-link e-link--action" [routerLink]="['/about/whats-new']">
             <span class="e-link__title">View changelog</span>
             <span class="e-link__icon">
-              <i class="e-icon e-icon--arrow_right_circle-color"></i>
-              <i class="e-icon e-icon--arrow_right_circle-filled-color"></i>
+              <i class="e-icon e-icon--arrow_right_circle-color" aria-hidden="true"></i>
+              <i class="e-icon e-icon--arrow_right_circle-filled-color" aria-hidden="true"></i>
             </span>
           </a>
         </div>
