--- a/packages/web/src/app/shell/navbar/navbar.component.html
+++ b/packages/web/src/app/shell/navbar/navbar.component.html
@@ -62,8 +62,8 @@
       >
         <span class="e-link__title e-w-100">{{ navbarItem.title }}</span>
         <span class="e-link__icon">
-          <i class="e-icon e-icon--arrow_right_circle-color"></i>
-          <i class="e-icon e-icon--arrow_right_circle-filled-color"></i>
+          <i class="e-icon e-icon--arrow_right_circle-color" aria-hidden="true"></i>
+          <i class="e-icon e-icon--arrow_right_circle-filled-color" aria-hidden="true"></i>
         </span>
       </a>
     </div>
